--- a/flutter_google_places_sdk/pubspec.yaml
+++ b/flutter_google_places_sdk/pubspec.yaml
@@ -14,7 +14,8 @@ dependencies:
   flutter_google_places_sdk_ios: ^0.1.2+4
   flutter_google_places_sdk_web: ^0.1.3+3
   flutter_google_places_sdk_android: ^0.1.2+6
-  flutter_google_places_sdk_windows: ^0.1.0+1
+  flutter_google_places_sdk_windows:
+    path: ../flutter_google_places_sdk_windows
   flutter_google_places_sdk_linux: ^0.1.0+0
   flutter_google_places_sdk_macos: ^0.1.0+0
 
