--- a/flutter_google_places_sdk_windows/pubspec.yaml
+++ b/flutter_google_places_sdk_windows/pubspec.yaml
@@ -11,7 +11,10 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_google_places_sdk_platform_interface: ^0.2.4+3
-  flutter_google_places_sdk_http: ^0.1.0+0
+  flutter_google_places_sdk_http:
+    git:
+      url: https://github.com/Arthurius/flutter_google_places_sdk
+      path: flutter_google_places_sdk_http
 
 dev_dependencies:
   flutter_lints: ^2.0.1
